# grok-install-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  _config.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: ci.yml  publish.yml  security.yml
_layouts/: default.html
examples/hello-agent/: README.md  grok-install.yaml
examples/reply-bot/: README.md  grok-install.yaml
scripts/: generate_posters.py
src/grok_install/: __init__.py  __main__.py  cli.py
src/grok_install/core/: __init__.py  models.py  parser.py  registry.py  validator.py
src/grok_install/deploy/: __init__.py  base.py  docker.py  railway.py  replit.py  vercel.py
src/grok_install/integrations/: __init__.py  github.py  x_api.py
src/grok_install/runtime/: __init__.py  agent.py  client.py  memory.py  swarm.py  tools.py
src/grok_install/safety/: __init__.py  rules.py  scanner.py
src/grok_install/telemetry/: __init__.py  client.py  config.py  events.py
tests/: conftest.py  test_cli.py  test_cli_telemetry.py  test_deploy.py  test_extras.py  test_integrations.py  test_parser.py  test_runtime.py  test_safety.py  test_swarm_safety.py  test_telemetry.py  test_validator.py  test_voice_safety.py
tests/fixtures/: bad_secret.yaml  bad_unknown_tool.yaml  blocked_tool.yaml  swarm.yaml  swarm_cycle.yaml  valid.yaml  voice.yaml  voice_bad.yaml
