[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "grok-install"
version = "0.1.0"
description = "Install, run, and deploy Grok agents from a grok-install.yaml — the 'npm install' for xAI agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "grok-install contributors" },
]
keywords = ["grok", "xai", "agents", "llm", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
xai = ["xai-sdk>=0.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.5",
    "bandit>=1.7",
]

[project.scripts]
grok-install = "grok_install.cli:app"

[project.urls]
Homepage = "https://github.com/agentmindcloud/grok-install-cli"
Issues = "https://github.com/agentmindcloud/grok-install-cli/issues"
Source = "https://github.com/agentmindcloud/grok-install-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_install"]

[tool.hatch.build.targets.sdist]
include = [
    "src/grok_install",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "SECURITY.md",
    "CONTRIBUTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["grok_install"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]
